Fix the same overflow bug in the docs.

--- a/theme/common.less
+++ b/theme/common.less
@@ -679,6 +679,9 @@ Avatar
     margin-left: 4em;
     margin-bottom: 1em;
 }
+#docs code.lang-typescript {
+    overflow-wrap: break-word;
+}
 
 @media only screen {
     .avatar .avatar-image {
